; ModuleID = '/home/carl/AnghaBench/linux/fs/notify/extr_mark.c_fsnotify_get_mark.c'
source_filename = "/home/carl/AnghaBench/linux/fs/notify/extr_mark.c_fsnotify_get_mark.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsnotify_mark = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fsnotify_get_mark(%struct.fsnotify_mark* %0) #0 {
  %2 = alloca %struct.fsnotify_mark*, align 8
  store %struct.fsnotify_mark* %0, %struct.fsnotify_mark** %2, align 8
  %3 = load %struct.fsnotify_mark*, %struct.fsnotify_mark** %2, align 8
  %4 = getelementptr inbounds %struct.fsnotify_mark, %struct.fsnotify_mark* %3, i32 0, i32 0
  %5 = call i32 @refcount_read(i32* %4)
  %6 = icmp ne i32 %5, 0
  %7 = xor i1 %6, true
  %8 = zext i1 %7 to i32
  %9 = call i32 @WARN_ON_ONCE(i32 %8)
  %10 = load %struct.fsnotify_mark*, %struct.fsnotify_mark** %2, align 8
  %11 = getelementptr inbounds %struct.fsnotify_mark, %struct.fsnotify_mark* %10, i32 0, i32 0
  %12 = call i32 @refcount_inc(i32* %11)
  ret void
}

declare dso_local i32 @WARN_ON_ONCE(i32) #1

declare dso_local i32 @refcount_read(i32*) #1

declare dso_local i32 @refcount_inc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
